--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,10 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+app/photoclo/database.config
+app/photoclo/debug
+app/photoclo/secret_key
+app/photoclo/utils/
+
+web/static/web
