--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,6 @@ app/photoclo/secret_key
 app/photoclo/utils/
 
 web/static/web
+
+app/face_detection.config
+app/face_recognition/face_detection.config
