--- a/UI/package.json
+++ b/UI/package.json
@@ -15,11 +15,14 @@
     "bootstrap": "^4.2.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "jquery": "^3.3.1",
+    "mdb": "^0.1.0",
+    "mdbootstrap": "^4.7.1",
     "node-sass": "^4.11.0",
     "nuxt-dropzone": "^0.2.8",
     "rxjs": "^5.5.5",
     "v-img": "^0.2.0",
     "v-uploader": "^1.8.0",
+    "v-viewer": "^1.3.2",
     "vue": "^2.6.2",
     "vue-core-image-upload": "^2.4.11",
     "vue-gallery": "^1.5.0",
