--- a/.gitignore
+++ b/.gitignore
@@ -103,8 +103,9 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-config/
+config/*
 web/static/web
+web/template
 
 app/face_detection.config
 app/face_recognition/face_detection.config
