--- a/UI/package.json
+++ b/UI/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^4.11.0",
     "nuxt-dropzone": "^0.2.8",
     "rxjs": "^5.5.5",
+    "string-pixel-width": "^1.9.0",
     "v-img": "^0.2.0",
     "v-uploader": "^1.8.0",
     "v-viewer": "^1.3.2",
@@ -29,6 +30,7 @@
     "vue-img": "^2.11.9",
     "vue-router": "^3.0.2",
     "vue-simple-uploader": "^0.6.0",
+    "vue-touch": "^2.0.0-beta.4",
     "vue-upload-component": "^2.8.19",
     "vuejs-uploader": "^0.6.5"
   },
