--- a/UI/package.json
+++ b/UI/package.json
@@ -28,6 +28,8 @@
     "vue-core-image-upload": "^2.4.11",
     "vue-gallery": "^1.5.0",
     "vue-img": "^2.11.9",
+    "vue-resize": "^0.4.5",
+    "vue-resize-directive": "^1.1.4",
     "vue-router": "^3.0.2",
     "vue-simple-uploader": "^0.6.0",
     "vue-touch": "^2.0.0-beta.4",
